--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -87,6 +87,9 @@ body {
   .site-logo {
     display: inline-block;
     width: 150px;
+    @media screen and (max-width:820px) {
+      width: 115px;
+    }
     a {
       background-color: $primary;
       padding: 10px;
@@ -114,9 +117,6 @@ body {
   height: 70vh;
   background-color: $primary;
   position: relative;
-  @media screen and (max-width: 1024px) {
-    height: 380px;
-  }
   figure {
     width: 100%;
     height: 100%;
@@ -158,14 +158,34 @@ body {
   }
 
   .topgrass {
+    // position: absolute;
+    // left: 0;
+    // bottom: 0;
+    // width: 100%;
+    // img {
+    //   width: 100%;
+    //   height: auto;
+    //   float: left;
+    // }
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
-    img {
-      width: 100%;
-      height: auto;
-      float: left;
+    height: 130px;
+    background-position: bottom center;
+    background-repeat: repeat-x;
+    background-size: contain;
+  }
+  @media screen and (max-width: 1024px) {
+    height: 450px;
+    .banner-text {
+      .inside {
+        font-size: 1.8rem;
+        line-height: 1.2;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 30px;
+      }
     }
   }
 }
@@ -304,6 +324,17 @@ body {
     }
   }
 
+  @media screen and (max-width: 820px) {
+    &.half {
+      .videoFrame, .videoText {
+        width: 100%;
+      }
+      .videoFrame {
+        margin-bottom: 20px!important;
+      }
+    }
+  }
+
 }
 
 body.home #content {
@@ -355,6 +386,11 @@ body.home #content {
         width: 120px;
         height: 120px;
       }
+      @media screen and (max-width: 820px) {
+        width: 70px;
+        height: 70px;
+        left: 10vw;
+      }
     }
     &:after {
       content:"";
@@ -371,6 +407,11 @@ body.home #content {
       @media screen and (min-width: 1400px) {
         width: 600px;
         height: 600px;
+      }
+      @media screen and (max-width: 820px) {
+        width: 200px;
+        height: 200px;
+        right: 0;
       }
     }
   }
@@ -531,6 +572,17 @@ body.home #content {
       align-items: center;
     }
   }
+
+  @media screen and (max-width: 820px) {
+    .film-info.half {
+      .videoFrame, .videoText {
+        width: 100%;
+      }
+      .videoFrame {
+        margin-bottom: 25px;
+      }
+    }
+  }
 }
 
 .featured-items-section {
@@ -539,7 +591,7 @@ body.home #content {
   z-index: 25;
   color: #FFF;
   padding-top: 60px;
-  padding-bottom: 80px;
+  padding-bottom: 60px;
   &:before {
     content:"";
     display: block;
@@ -566,5 +618,140 @@ body.home #content {
   }
 }
 
+.recent-films {
+  margin-top: 40px;
+  .info {
+    border-bottom: 1px solid $secondary;
+    a {
+      display: inline-block;
+      text-decoration: none;
+      position: relative;
+      padding: 10px 15px 10px 0;
+      color: #FFF;
+      position: relative;
+      &:after {
+        content: "";
+        display: block;
+        width: 0;
+        height: 0;
+        border-left: 5px solid #FFF;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        position: absolute;
+        top: 17px;
+        right: 0;
+        transition: transform ease .3s;
+      }
+      &:hover, &:focus {
+        color: $secondary;
+        &:after {
+          border-left-color: $secondary;
+          transform: translateX(4px);
+        }
+      }
+    }
+  }
+}
 
+.site-footer {
+  width: 100%;
+  float: left;
+  color: #FFF;
+  background-color: #000;
+  padding-top: 40px;
+  padding-bottom: 55px;
+  .footer-logo {
+    display: inline-block;
+    width: 150px;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+  .sitename {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-transform: uppercase;
+  }
+
+  @media screen and (max-width: 820px) {
+    .footer-site-info {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      .footer-logo {
+        img {
+          width: 150px;
+        }
+      }
+      div {
+        width: 100%;
+        text-align: center;
+      }
+    }
+  }
+}
+
+.post-feat-image {
+  width: 100%;
+  height: 60vh;
+  background-color: $primary;
+  position: relative;
+  margin: 0 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  .img {
+    display: none;
+  }
+  .topgrass {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-image: url('images/grass.png');
+    background-position: bottom center;
+    background-repeat: repeat-x;
+    background-size: contain;
+  }
+  @media screen and (max-width: 1024px) {
+    height: 400px;
+  }
+}
+
+body.subpage {
+  .intro-section  {
+    background-color: #f3d3b2;
+    padding-top: 70px;
+    padding-bottom: 80px;
+    .videoText {
+      color: $primary;
+      .category {
+        text-transform: uppercase;
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 1.2;
+        color: $secondary;
+      }
+      h1 {
+        font-size: 2rem;
+        font-weight: 500;
+        line-height: 1.2;
+        position: relative;
+        margin: 0 0 15px;
+        color: $primary;
+        // &:after {
+        //   content: "";
+        //   display: block;
+        //   width: 70px;
+        //   height: 5px;
+        //   background-color: $secondary;
+        //   position: relative;
+        // }
+      }
+    }
+  }
+}
 
