Styling inner page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -775,7 +775,8 @@ body.home #content {
     bottom: 0;
     width: 100%;
     height: 60px;
-    background-image: url('images/grass.png');
+    // background-image: url('images/grass.png');
+    background-image: url('images/grass-dark.png');
     background-position: bottom center;
     background-repeat: repeat-x;
     background-size: contain;
@@ -787,12 +788,13 @@ body.home #content {
 
 body.subpage {
   .intro-section  {
-    background-color: #f3d3b2;
+    // background-color: #f3d3b2;
+    background-color: #1a2514;
     padding-top: 70px;
-    padding-bottom: 80px;
+    padding-bottom: 120px;
     min-height: 20em;
     .videoText {
-      color: $primary;
+      color: #FFF;
       .category {
         text-transform: uppercase;
         font-size: 18px;
@@ -806,7 +808,7 @@ body.subpage {
         line-height: 1.2;
         position: relative;
         margin: 0 0 15px;
-        color: $primary;
+        color: #FFF;
         // &:after {
         //   content: "";
         //   display: block;
@@ -817,6 +819,31 @@ body.subpage {
         // }
       }
     }
+  }
+
+  .films-section {
+    background-color: #f3d3b2;
+    padding-bottom: 40px!important;
+  }
+  .forest {
+    display: none!important;
+    &:after {
+      content:"";
+      display: block;
+      width: 100%;
+      height: 70px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      background-image: url('images/grass-dark.png');
+      background-position: bottom center;
+      background-repeat: repeat-x;
+      background-size: contain;
+    }
+  }
+  .site-footer {
+    position: relative;
+    z-index: 20;
   }
 }
 
