Styling inner page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -823,7 +823,8 @@ body.subpage {
 
   .films-section {
     background-color: #f3d3b2;
-    padding-bottom: 40px!important;
+    padding-top: 30px;
+    padding-bottom: 40px;
   }
   .forest {
     display: none!important;
